update music app

--- a/music_app/app/assets/stylesheets/application.css
+++ b/music_app/app/assets/stylesheets/application.css
@@ -13,3 +13,18 @@
  *= require_tree .
  *= require_self
  */
+
+
+
+
+body {
+    background-color: rgb(181, 190, 216); 
+    
+    font-family: 'Courier New', Courier, monospace;
+   justify-content: center;
+    align-items: center;
+}
+
+
+
+  
