--- a/music_app/app/views/users/new.html.erb
+++ b/music_app/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<form action=" <%= users_url %> " method='post'>
+<form class='sign-up' action=" <%= users_url %> " method='post'>
     <input type="hidden" name='authenticity_token'
         value = '<%= form_authenticity_token %>''>
     <h1>Sign Up!</h1>
